<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="17dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="21dp"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/search_tl"

                android:layout_width="match_parent"
                android:layout_height="56dp"

                android:layout_marginBottom="17dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                app:layout_constraintBottom_toTopOf="@+id/in_stock"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText

                    android:id="@+id/search_et"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="match_parent"

                    android:layout_height="match_parent"
                    android:autofillHints=""

                    android:background="@drawable/style_edit_text"

                    android:drawableStart="@drawable/ic_search"
                    android:drawablePadding="16dp"

                    android:hint="@string/search_fragment_search"
                    android:inputType="text"

                    android:maxLines="1"
                    android:paddingStart="16dp"
                    android:paddingTop="0dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="0dp"

                    android:textColorHint="#8C162344"
                    android:textIsSelectable="false"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/in_stock"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableRight="@drawable/selector_checkbox"
                android:text="@string/search_filter_fragment_in_stock"
                android:textColor="@color/big_stone"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/production"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/search_tl" />

            <TextView
                android:id="@+id/production"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:drawableEnd="@drawable/selector_dropdown"
                android:text="@string/search_filter_fragment_production"
                android:textColor="@color/big_stone"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/in_stock" />

            <TextView
                android:id="@+id/production_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="51dp"
                android:text="@string/search_filter_fragment_production"
                android:textColor="@color/big_stone"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/production" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/start_days_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                app:layout_constraintEnd_toStartOf="@+id/end_days_input_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/production_title">

                <EditText
                    android:id="@+id/start_days"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:autofillHints=""
                    android:background="@drawable/style_edit_text"
                    android:hint="@string/search_filter_fragment_one_day"
                    android:inputType="number"
                    android:maxLength="11"
                    android:maxLines="1"
                    android:paddingStart="16dp"
                    android:paddingTop="0dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="0dp"
                    android:textColorHint="#8C162344" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/end_days_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/start_days_input_layout"
                app:layout_constraintTop_toTopOf="@+id/start_days_input_layout">

                <EditText
                    android:id="@+id/end_days"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:autofillHints=""
                    android:background="@drawable/style_edit_text"
                    android:hint="@string/search_filter_fragment_five_day"
                    android:inputType="number"
                    android:maxLength="11"
                    android:maxLines="1"
                    android:paddingStart="16dp"
                    android:paddingTop="0dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="0dp"
                    android:textColorHint="#8C162344" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/delivery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:button="@null"
                android:drawableRight="@drawable/selector_checkbox"
                android:text="@string/search_filter_fragment_delivery"
                android:textColor="@color/big_stone"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/start_days_input_layout" />

            <TextView
                android:id="@+id/size_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="Цена"
                android:textColor="@color/big_stone"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/delivery" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/width_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                app:layout_constraintEnd_toStartOf="@+id/height_input_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/size_title">

                <EditText
                    android:id="@+id/price_min"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:autofillHints=""
                    android:background="@drawable/style_edit_text"
                    android:hint="@string/search_filter_fragment_width"
                    android:inputType="number"
                    android:maxLength="11"
                    android:maxLines="1"
                    android:paddingStart="16dp"
                    android:paddingTop="0dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="0dp"
                    android:textColorHint="#8C162344" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/height_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/width_input_layout"
                app:layout_constraintTop_toTopOf="@+id/width_input_layout">

                <EditText
                    android:id="@+id/price_max"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:autofillHints=""
                    android:background="@drawable/style_edit_text"
                    android:hint="@string/search_filter_fragment_height"
                    android:inputType="number"
                    android:maxLength="11"
                    android:maxLines="1"
                    android:paddingStart="16dp"
                    android:paddingTop="0dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="0dp"
                    android:textColorHint="#8C162344" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/material_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/search_filter_fragment_material"
                android:textColor="@color/big_stone"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/width_input_layout" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/material_chip_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/material_title">

            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:text="@string/search_filter_fragment_color"
                android:textColor="@color/big_stone"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/material_chip_group" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_filter_fragment_not_selected"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/color" />

            <TextView
                android:id="@+id/select_on_map"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:drawableEnd="@drawable/ic_open"
                android:text="@string/search_filter_fragment_select_on_map"
                android:textColor="@color/big_stone"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/color" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/apply"
                style="@style/BoldTextView"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@drawable/selector_blue_button"
                android:letterSpacing="0.01"
                android:text="@string/search_filter_fragment_apply_a_filter"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:cornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/select_on_map" />

            <TextView
                android:id="@+id/reset"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="23dp"
                android:enabled="false"
                android:text="@string/search_filter_fragment_save"
                android:textAlignment="center"
                android:textColor="@color/dodger_blue"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/apply" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/production_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="production_title, start_days_input_layout, end_days_input_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>